tests/macros/confirm/extension.rs
fn main() {
    let q = discourse::questions![Confirm { extension: todo!() }];
}
